--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,21 @@ img {
     align-items: center;
 }
 
+.time,
+.moves,
+.score {
+    display: flex;
+    width: 20%;
+    gap: 5px;
+}
+
+.dynamic {
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .display-area {
     display: flex;
     width: 100%;
